# fullstack-project

./: .gitignore  LLM_PROMPT.md  PROJECT_STRUCTURE  README.MD  run_backend.sh
BACKEND/: pyproject.toml  requirements.txt
BACKEND/app/: main.py
BACKEND/app/api/: deps.py
BACKEND/app/api/routes/: auth.py  users.py
BACKEND/app/core/: config.py  security.py
BACKEND/app/crud/: user.py
BACKEND/app/db/: session.py
BACKEND/app/models/: token.py  user.py
BACKEND/app/schemas/: token.py  user.py
FRONTEND/: package-lock.json
FRONTEND/app/: app.css  root.tsx
FRONTEND/app/routes/: dashboard.tsx  home.tsx  login.tsx  register.tsx
FRONTEND/app/utils/: api.ts
FRONTEND/src/: App.tsx  index.css
FRONTEND/src/api/: client.ts
FRONTEND/src/components/: Layout.tsx
FRONTEND/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
