[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.4",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]
